--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -23,7 +23,7 @@ block profile
             .h3.font-weight-bold.color-theme-brand Товар готов к сравнению
             .h4.text-nowrap.d-flex.flex-column.align-items-center.justify-content-center.box-shadow.bg-theme-success.color-theme-white.rounded-pill.px-2.py-1 3 шт.
           .mb-5
-            a.h5.theme-hover(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
+            a.h5.theme-hover.d-inline-block.mr-3(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
           .d-flex.align-items-center.justify-content-between
             button.popup__close.btn.btn_nobg.text-left.px-0(type="button") Продолжить
               br
@@ -92,7 +92,7 @@ block profile
           .h3.font-weight-bold.color-theme-brand Товар добавлен в избранное
           .h4.text-nowrap.d-flex.flex-column.align-items-center.justify-content-center.box-shadow.bg-theme-light.color-theme-brand.rounded-pill.px-2.py-1 3 шт.
         .mb-5
-          a.h5.theme-hover(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
+          a.h5.theme-hover.d-inline-block.mr-3(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
         .d-flex.align-items-center.justify-content-between
           button.popup__close.btn.btn_nobg.text-left.px-0(type="button") Продолжить
             br
